# PruebasDthe_coding_train

./: Cargo.toml  README.md
capitulos/000_Comodin/: Cargo.toml
capitulos/000_Comodin/src/: main.rs  sketch.rs
capitulos/000_Test/: Cargo.toml
capitulos/000_Test/src/: main.rs  sketch.rs  test.rs
capitulos/001_Starfield/: Cargo.toml
capitulos/001_Starfield/src/: main.rs  sketch.rs  star.rs
capitulos/002_Menger_Sponge_Fractal/: Cargo.toml
capitulos/002_Menger_Sponge_Fractal/src/: boxy.rs  main.rs  sketch.rs
capitulos/007_Solar_System_in_Processing/: Cargo.toml
capitulos/007_Solar_System_in_Processing/src/: main.rs  planet.rs  sketch.rs
capitulos/010_Maze_Generator/: Cargo.toml
capitulos/010_Maze_Generator/src/: cell.rs  main.rs  sketch.rs
capitulos/013_Reaction_Diffusion_Algorithm/: Cargo.toml
capitulos/013_Reaction_Diffusion_Algorithm/src/: main.rs  sketch.rs
capitulos/014_FractalTree/: Cargo.toml
capitulos/014_FractalTree/src/: sketch.rs
capitulos/028_Metaballs/: Cargo.toml
capitulos/028_Metaballs/src/: blob.rs  main.rs  sketch.rs
capitulos/030_Phyllotaxis/: Cargo.toml
capitulos/030_Phyllotaxis/src/: sketch.rs
capitulos/032_1_Agar_io_Part_1/: Cargo.toml
capitulos/032_1_Agar_io_Part_1/src/: blob.rs  main.rs  sketch.rs
capitulos/033_Poisson_disc/: Cargo.toml
capitulos/033_Poisson_disc/src/: main.rs  sketch.rs
capitulos/034_Diffusion_Limited_Aggregation/: Cargo.toml
capitulos/050_1b_Animated_Circle_Packing_Part_1/: Cargo.toml
capitulos/056_Attraction_and_Repulsion_Forces/: Cargo.toml
capitulos/061_Fractal_Spirograph/: Cargo.toml
capitulos/064_1_Forward_Kinematics/: Cargo.toml
capitulos/067_Pong/: Cargo.toml
capitulos/069_1_Evolutionary_Steering_Behaviors/: .gitignore  Cargo.toml
capitulos/078_Simple_Particle_System/: Cargo.toml
capitulos/081_1_Circle_Morphing_Part_1/: Cargo.toml
capitulos/085_The_Game_of_Life/: Cargo.toml
capitulos/088_Snowfall/: Cargo.toml
capitulos/089_Langtonsant/: Cargo.toml
capitulos/090_Floyd-Steinberg_Dithering/: Cargo.toml
capitulos/093_DoublePendulum/: Cargo.toml
capitulos/102_WaterRipples/: Cargo.toml
libfinal/: Cargo.toml
libfinal/src/: camara.rs  color.rs  engine.rs  environment.rs  getsdl2.rs  image.rs  lib.rs  matem.rs  parametros.rs  render_gl.rs  rendering.rs  shape.rs  structure.rs  test.rs  transform.rs  transform3d.rs  typography.rs  utiles.rs
resources/shaders/: triangle.vert
(+38 files in other folders)
