[workspace]
members = [
    "libfinal",
    "capitulos/000_Test",
    "capitulos/000_Comodin",
    "capitulos/001_Starfield",
    "capitulos/002_Menger_Sponge_Fractal",
    "capitulos/007_Solar_System_in_Processing",
    "capitulos/010_Maze_Generator",
    "capitulos/013_Reaction_Diffusion_Algorithm",
    "capitulos/014_FractalTree",
    "capitulos/028_Metaballs",
    "capitulos/030_Phyllotaxis",
    "capitulos/032_1_Agar_io_Part_1"
]
