[workspace]
members = [
    "libfinal",
    "capitulos/000_Test",
    "capitulos/000_Comodin",
    "capitulos/001_Starfield",
    "capitulos/002_Menger_Sponge_Fractal",
    "capitulos/007_Solar_System_in_Processing",
    "capitulos/010_Maze_Generator",
    "capitulos/013_Reaction_Diffusion_Algorithm",
    "capitulos/014_FractalTree",
    "capitulos/028_Metaballs",
    "capitulos/030_Phyllotaxis",
    "capitulos/032_1_Agar_io_Part_1",
    "capitulos/033_Poisson_disc",
    "capitulos/034_Diffusion_Limited_Aggregation",
    "capitulos/050_1b_Animated_Circle_Packing_Part_1"
]
